# ml-garden

./: .gitignore  README.md  init.sh  pyproject.toml  pytest.ini  run.py  run_interactive.py  test.py
.github/: pull_request_template.md
.github/workflows/: style-checks.yaml  unit-testing.yaml
documentation/: user_guide.md
examples/ames_housing/: description.md
examples/ames_housing/configs/: 1_ames_housing_baseline.json  2_ames_housing_hp_tuning.json  3_ames_housing_hp_tuned.json  4_ames_housing_autogluon.json
examples/delay/configs/: base.json
examples/delay/data/: train.csv
ml_garden/: __init__.py
ml_garden/core/: __init__.py  constants.py  data_container.py  model.py  model_registry.py  pipeline.py  random_state_generator.py  step_registry.py
ml_garden/core/steps/: base.py  calculate_features.py  calculate_metrics.py  calculate_reports.py  clean.py  encode.py  explainer_dashboard.py  fit_model.py  fit_model_autogluon.py  generate.py  tabular_split.py
ml_garden/implementation/tabular/autogluon/: __init__.py  model.py
ml_garden/implementation/tabular/xgboost/: __init__.py  model.py
ml_garden/utils/: compression_utils.py  df_type_conversions.py  string_utils.py
pipeline_lib/: __init__.py
pipeline_lib/core/: __init__.py  data_container.py  model.py  model_registry.py  pipeline.py  random_generator.py  random_state_generator.py  step_registry.py  utils.py
pipeline_lib/core/steps/: __init__.py  augment.py  base.py  calculate_features.py  calculate_metrics.py  calculate_reports.py  calculate_train_metrics.py  clean.py  encode.py  explainer_dashboard.py  fit_encoders.py  fit_model.py  generate.py  input_scaling.py  ocf_reports.py  predict.py  tabular_split.py  target_scaling.py
pipeline_lib/implementation/tabular/xgboost/: __init__.py  explainer_dashboard.py  fit_model.py  model.py  predict.py
pipeline_lib/utils/: compression_utils.py  df_type_conversions.py
project_base/: test.py
tests/core/: test_model_registry.py  test_pipeline.py  test_step_registry.py
tests/core/steps/: test_calculate_features.py  test_calculate_metrics.py  test_clean.py  test_encoding.py  test_fit_model.py  test_generate.py  test_tabular_split.py
tests/data/: ames_housing.json  predict.csv  test.csv  test.json  test_classification.json  test_delay_classification.csv  test_without_predict_path.json  train.csv
