[tool.black]
line-length = 100
preview = true

[tool.isort]
atomic = true
profile = "black"
skip = [".venv"]

[tool.poetry]
name = "ml-garden"
version = "0.1.0"
description = "A library for designing and re-using ML pipelines"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "ml_garden" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.2.2"
pyarrow = "^15.0.2"
PyYAML = "^6.0.1"
scikit-learn = ">=1.3.0,<1.4.1"
optuna = "^3.6.1"
optuna-dashboard = "^0.15.1"
explainerdashboard = "^0.4.7"
xgboost = { version = ">=1.6,<2.1", optional = true }
category-encoders = "^2.6.3"
tqdm = "^4.66.4"
dill = "^0.3.8"
mlflow = "^2.14.1"
matplotlib = "^3.9.0"
autogluon = { version = "^1.1.1", optional = true }
boto3 = { version = "^1.34.144", optional = true }
botocore = { version = "^1.34.144", optional = true }

[tool.poetry.extras]
xgboost = ["xgboost"]
autogluon = ["autogluon", "boto3", "botocore"]
all_models = ["xgboost", "autogluon", "boto3", "botocore"]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"
ipykernel = "^6.29.4"
memray = "^1.13.1"
pyinstrument = "^4.6.2"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
